# simple-terminal-app

./: Cargo.toml  README.md
examples/: example.rs
src/: app.rs  lib.rs  scene.rs
src/scene/: helper.rs  mod.rs
tests/: integration_test.rs
