[package]
name = "simple-terminal-app"
version = "0.0.2"
edition = "2018"
description = "A simple tool for creating terminal-based apps that require raw mode and multiple scenes."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"
