[package]
name = "simple-terminal-app"
version = "0.1.1"
edition = "2021"
description = "A simple tool for creating terminal-based apps that require raw mode and multiple scenes."
license = "MIT"
documentation = "https://docs.rs/simple-terminal-app/latest/simple_terminal_app/"
repository = "https://github.com/remnantofcliff/simple-terminal-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"